<resources>
    <string name="app_name">Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">Login</string>
    <string name="next">Next</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="instruction">Instruction</string>
    <string name="instruction_long_text">This instruction for using this app.\n
    \t1. You need to login.\n
    \t2. You can scroll and view some shoes.\n
    \t3. You can shoe details.\n</string>
    <string name="to_our_store">To our Shoe Store</string>
    <string name="logOut">Log Out</string>
</resources>