<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.onboarding.InstructionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="22dp">

        <TextView
            android:id="@+id/welcome_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/welcome_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_long_text"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="30dp"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button"
            android:layout_gravity="bottom"
            android:text="@string/next"/>

    </LinearLayout>
</layout>